// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select2Field render() renders with flat choices 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <select
      className="form-control"
      disabled={false}
      id="id-fieldName"
      multiple={false}
      onChange={[Function]}
      placeholder="--"
      required={false}
      value="fieldValue"
    >
      <option
        key="a"
        value="a"
      />
      <option
        key="b"
        value="b"
      />
      <option
        key="c"
        value="c"
      />
    </select>
  </div>
</div>
`;

exports[`Select2Field render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <select
      className="form-control"
      disabled={false}
      id="id-fieldName"
      multiple={false}
      onChange={[Function]}
      placeholder="--"
      required={false}
      value="fieldValue"
    />
  </div>
</div>
`;

exports[`Select2Field render() renders with paired choices 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <select
      className="form-control"
      disabled={false}
      id="id-fieldName"
      multiple={false}
      onChange={[Function]}
      placeholder="--"
      required={false}
      value="fieldValue"
    >
      <option
        key="a"
        value="a"
      >
        abc
      </option>
      <option
        key="b"
        value="b"
      >
        bcd
      </option>
      <option
        key="c"
        value="c"
      >
        cde
      </option>
    </select>
  </div>
</div>
`;

exports[`Select2Field render() renders without form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <select
      className="form-control"
      disabled={false}
      id="id-fieldName"
      multiple={false}
      onChange={[Function]}
      placeholder="--"
      required={false}
      value=""
    />
  </div>
</div>
`;
